# optp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  conanfile.txt  graph_info.json  license  network_interfaces.cpp  network_interfaces.h  object.h  operation.h  optp.cpp  optp.h  optp.sln  optp_config.cpp  optp_config.h  optp_lib.h  readme.md  real_node.cpp  real_node.h  remote_node.cpp  remote_node.h  test.cpp  test_config.json  uuid_provider.h  virtual_node.cpp  virtual_node.h
cmake/: object_metatypes.h.in
enc_temp_folder/59d8b09e78e7f0fb18e7d49658929c77/: test.cpp
example/: CMakeLists.txt  example.cpp  fake_node.cpp  fake_node.h  interpreter.cpp  interpreter.h  ping_operation.cpp  ping_operation.h  ping_operation_handler.cpp  ping_operation_handler.h  ping_operation_result.h
include/optp/: constructor.h  deserializable.h  node.h  node_def.h  object.h  object_factory.h  operation.h  operation_handler.h  operation_result.h  optp.h  serializable.h  typedefs.h
interface/: deserializable.h  node.h  object.h  operation.h  serializable.h  typedefs.h
optp/: optp.cpp  optp.h  optp.vcxproj  optp_config.cpp  optp_config.h
profiles/: linux_x64_debug
src/: CMakeLists.txt  connection_listener.cpp  connection_listener.h  connector.cpp  connector.h  network_interfaces.cpp  network_interfaces.h  node_def.cpp  node_def.h  object.cpp  object.h  operation.cpp  operation.h  operation_handler.cpp  operation_handler.h  operation_result.cpp  operation_result.h  optp.cpp  optp.h  optp_config.cpp  optp_config.h  optp_lib.h  optp_pch.h  pch.h  real_node.cpp  real_node.h  remote_node.cpp  remote_node.h  typedefs.h  uuid_provider.cpp  uuid_provider.h  virtual_node.h
src/operations/: CMakeLists.txt  disconnect_op.cpp  disconnect_op.h  node_uuid_getter_op.cpp  node_uuid_getter_op.h  operation_types.h
test/: fake_node.cpp  fake_node.h  interpreter.cpp  interpreter.h  test.cpp  test.vcxproj  test_config.json
